# pennylane-qulacs

./: .gitignore  .gitmodules  .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  Makefile  README.md  README.rst  requirements-ci.txt  requirements.txt  setup.py  setup_gpu.py
.github/workflows/: format.yml  post_release_version_bump.yml  pre_release_version_bump.yml  tests.yml  upload.yml
coverage_html_report/: index.html  pennylane_qulacs___init___py.html  pennylane_qulacs_qulacs_device_py.html  status.json
doc/: Makefile  code.rst  conf.py  index.rst  requirements.txt
doc/_build/doctrees/: code.doctree  environment.pickle  index.doctree  installation.doctree  support.doctree
doc/_build/doctrees/devices/: simulator.doctree
doc/_build/html/: .buildinfo  code.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  support.html
doc/_build/html/_sources/devices/: simulator.rst.txt
doc/_build/html/devices/: simulator.html
doc/devices/: simulator.rst
doc/xanadu_theme/: header.html
pennylane_qrack/: CMakeLists.txt  QrackDeviceConfig.toml  __init__.py  _version.py  qrack_device.cpp  qrack_device.py
pennylane_qulacs/: __init__.py  _version.py  qulacs_device.py
tests/: conftest.py  test_apply.py  test_device.py  test_expval.py  test_integration.py  test_units.py
